# knoa

./: .gitignore  AI学习笔记_长会话上下文.md  DEVELOPMENT_PLAN.md  README.md  README_EN.md  docker-compose.dev.yml  docker-compose.prod-lean.yml  docker-compose.yml  ruff.toml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  alembic.ini  docker-compose.yml  entrypoint.sh  pyproject.toml  test_agnes.py
backend/app/: config.py  database.py  deps.py  main.py
backend/app/core/: graph.py  logging_config.py  memory.py  metrics.py  oss.py  pagination.py  ratelimit.py  rbac.py  security.py  storage.py  tts.py
backend/app/core/llm/: base.py  openai_compat.py
backend/app/core/rag/: agent.py  ai_review.py  chunker.py  embeddings.py  es_client.py  es_retriever.py  fetchers.py  ingestor.py  multimodal.py  parsers.py  pipeline.py  reranker.py  retriever.py  web_search.py
backend/app/core/store/: redis_store.py
backend/app/data/: ingest_seed.py  seed.py  seed_doc_meta.py  seed_graph.py
backend/app/data/markdown/ads/: acos-optimization.md  ad-report-analysis.md  auto-campaign-strategy.md  bid-strategy.md  competitor-ad-analysis.md  negative-keywords.md  new-product-budget.md  sb-brand-ads.md  sd-display-ads.md  sp-campaign-structure.md
backend/app/data/markdown/compliance/: astm-f963.md  ce-marking.md  cpc-certification.md  (+7 more)
backend/app/db/: __init__.py  init_db.py
backend/app/models/: announcement.py  auth.py  chat.py  common.py  department.py  knowledge.py  operation_log.py  roles.py
backend/app/routers/: analytics.py  announcements.py  ask.py  auth.py  departments.py  events.py  feedback.py  graph.py  health.py  knowledge.py  memory.py  metrics.py  operations.py  oss.py  roles.py  sessions.py  settings.py  sources.py  tasks.py  trending.py  tts.py
backend/loadtests/: locustfile.py  rag_eval.py
backend/migrations/: env.py
backend/migrations/versions/: 985f4b713524_chat_session_summary.py  a1b2c3d4e5f6_document_review_fields.py  b2c3d4e5f60_kb_order.py  b66e5634cb56_add_department_document_task_tags_.py  eb70aefd7b19_initial_schema.py  fd46be01a5dc_chat_message_attachments.py  p0docfields_add_document_uploader_scope_parse.py  p1analytics_operation_log_announcement.py  p2fix_uploader_fk.py  p8_schema.py  u1profile_user_fields.py  u2opssource.py  u3modelprefs.py  u4roles.py  u5kbstrict.py
backend/scripts/: seed_test_users.py
backend/tests/: _fakes.py  conftest.py  test_api.py  test_ask.py  test_retrieval.py  test_schema.py
(+182 files in other folders)
