[project]
name = "knoa-backend"
version = "0.1.0"
description = "知海 Knoa - 跨境电商运营 AI 知识库后端"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sse-starlette>=2.2.1",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "redis>=5.2.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "httpx>=0.28.0",
    "rank-bm25>=0.2.2",
    "jieba>=0.42.1",
    "openai>=2.45.0",
    "langsmith>=0.10.2",
    "alembic>=1.13.0",
    "numpy>=2.0.0",
    "python-dotenv>=1.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.8.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100
