[project]
name = "knoa-backend"
version = "0.1.0"
description = "知海 Knoa - 跨境电商运营 AI 知识库后端"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sse-starlette>=2.2.1",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "redis>=5.2.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "httpx>=0.28.0",
    "rank-bm25>=0.2.2",
    "jieba>=0.42.1",
    "openai>=2.45.0",
    "langsmith>=0.10.2",
    "alembic>=1.13.0",
    "numpy>=2.0.0",
    "python-dotenv>=1.0.0",
]

# 压测工具：放进 optional extra。CI 的 `uv sync --frozen` 默认不装
# extra（除非 --extra load），不影响生产构建与测试；本地
# `uv sync --extra load` 安装后 `uv run --extra load locust` 启动。
[project.optional-dependencies]
load = [
    "locust>=2.31.0",
]

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
# test_agnes.py 是需连「活后端」(127.0.0.1:8000) 的手动集成脚本，
# 不应进入 CI 单测套件；显式忽略，避免被误收集或漏收集时语义不清。
addopts = "--ignore=test_agnes.py"
# 默认 fixture loop scope = session：让 prepare_test_db 这种
# session 级异步 fixture 能拿到 session 级 loop runner（否则
# ScopeMismatch）。真正「跟着测试走」的 db_session / client /
# _dispose_engine_after_test 在各自定义处用 loop_scope="function"
# 显式覆盖，使其跑在所属测试的 function loop 上，从而它们的
# asyncpg 连接与测试同 loop，避免 attached to a different loop。
asyncio_default_fixture_loop_scope = "session"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
# F=硬错误；BLE=盲捕异常；DTZ=显式时区(统一UTC)；B=bugbear。
# B008 忽略：FastAPI 的 Depends(...) 依赖注入惯用法属误报。
select = ["F", "BLE", "DTZ", "B"]
ignore = ["B008"]
